src/plugins/explore/public/components/experience_banners/classic_experience_banner/classic_experience_banner.scss
/*
 * Copyright OpenSearch Contributors
 * SPDX-License-Identifier: Apache-2.0
 */

.exploreClassicExperienceBanner {
  &__img {
    margin-right: $ouiSizeXS;
  }

  // EuiCallOut wraps children within two divs
  & > div > div {
    display: flex;
    justify-content: space-between;
    align-items: center;

    // Adding some specificity by nesting
    .exploreClassicExperienceBanner__newExperienceButton {
      font-size: $ouiFontSizeXS;
      height: $ouiSizeL;
    }
  }
}

